# figleaf

./: .gitignore  LICENSE  README.md  example.sh  install.sh  rosbuild_with_catkin_env.txt
catkin/figleaf_2d/: CMakeLists.txt  package.xml
catkin/figleaf_2d/config/: blur.rviz  box.rviz  clean.rviz  mid.rviz  object_modeling_self_filter.yaml  tutorial.rviz
catkin/figleaf_markers/: CMakeLists.txt  package.xml
catkin/rviz_record_object_pose/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  plugin_description.xml
catkin/rviz_record_object_pose/src/: camera_publisher_panel.cpp  camera_publisher_panel.cpp~  camera_publisher_panel.h
libs/: Makefile  copy_video.py
libs/SLIC-Superpixels/: faster.avi  test_slic  test_slic.cpp
rosbuild/rviz_arrows/: CMakeLists.txt  mainpage.dox  manifest.xml
rosbuild/rviz_record_object_pose/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~  plugin_description.xml
rviz_configs/: kinect_and_clean.rviz  kinect_and_clean_nobuttons.rviz  kinect_and_widestereo.rviz  kinect_blurred_puffed.rviz  kinect_blurred_puffed_nobuttons.rviz  kinect_box_nobuttons.rviz
scripts/: all.py  blurred_kinect.sh  build_catkin.sh  example.sh  experiment.sh  image_view.sh  install.sh  pr2_interactive_manipulation.sh  process_bag.py  process_bag_test.py  reset_robot.sh  rosbuild.sh  rviz_boxes.sh  rviz_kinect_blurred.sh  rviz_kinect_blurred_puffed.sh  rviz_kinect_clean.sh  timer.py  tutorial.sh
scripts/potential-filters/: median.py  tiny.py
user_studies/: questions01.txt
user_studies/cse599k/: script.txt
(+15 files in other folders)
