<?xml version="1.0"?>
<package>
  <name>rviz_record_object_pose</name>
  <version>0.0.1</version>
  <description>Rviz plugins to publish and display the camera pose.</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pr2_pbd_speech_recognition</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pr2_pbd_speech_recognition</run_depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
